--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to the Language Translation Hub!!</h1>
+    <h3>Bridging worlds,one word at a time.</h3>
+    <button>Let's Get Started</button>
     <script src="countries.js"></script>
     <script src="translate.js"></script>
 </body>
