--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Language Translator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-    <h1>Welcome to the Language Translation Hub!!</h1>
-    <h3>Bridging worlds,one word at a time.</h3>
-    <button>Let's Get Started</button>
-    <script src="countries.js"></script>
-    <script src="translate.js"></script>
+    <div class="heading">
+        <h1>Welcome to the Language Translation Hub!! <i class="fa-solid fa-language"></i></h1>
+        <h3>Bridging worlds,one word at a time.</h3>
+        <br>
+        <button onclick="window.location.href='mainpage.html'">Let's Get Started...</button>
+    </div>
 </body>
 </html>
