--- a/mainpage.html
+++ b/mainpage.html
@@ -15,21 +15,13 @@
                 <textarea id="to" placeholder="Translated Text" readonly disabled></textarea>
             </div>
             <div class="lang">
-                <i class="fa-solid fa-volume-high"></i>
-                <i class="fa-solid fa-copy"></i>
-                <select>
-                    <option value="English">English</option>
-                    <option value="English">Telugu</option>
-                    <option value="English">Hindi</option>
-                </select>
+                <i class="fa-solid fa-volume-high" id="fromVol"></i>
+                <i class="fa-solid fa-copy" id="fromCopy"></i>
+                <select id="select0"></select>
                 <i class="fa-solid fa-arrow-right-arrow-left"></i>
-                <select>
-                    <option value="English">English</option>
-                    <option value="English">Telugu</option>
-                    <option value="English">Hindi</option>
-                </select>
-                <i class="fa-solid fa-volume-high"></i>
-                <i class="fa-solid fa-copy"></i>
+                <select id="select1"></select>
+                <i class="fa-solid fa-volume-high" id="toVol"></i>
+                <i class="fa-solid fa-copy" id="toCopy"></i>
             </div>
             <button>Translate</button>
         </div>
